--- a/modules/typescript-web/package.json
+++ b/modules/typescript-web/package.json
@@ -1,5 +1,8 @@
 {
   "devDependencies": {
     "typescript-plugin-css-modules": "^3.4.0"
+  },
+  "resolutions": {
+    "typescript-plugin-css-modules/**/postcss": "^8.3.0"
   }
 }
